# rondb

./: CMakeLists.txt  Dockerfile.oraclelinux7  Dockerfile.oraclelinux8  Dockerfile.oraclelinux9  Dockerfile.ubuntu22  MYSQL_VERSION
.github/workflows/: publish_rondb.yml
build_scripts/: build_script_prefix.sh
build_scripts/release_scripts/: Jenkinsfile  build_all.sh  deploy.sh  docker-build.sh  docker-create-builder.sh  run_training.sh
client/: CMakeLists.txt
cmake/: drogon.cmake  simdjson.cmake  ssl.cmake  trantor.cmake
extra/drogon/drogon-1.8.4/: CMakeLists.txt
mysql-test/: mysql-test-run.pl  ttl_test.py
mysql-test/collections/: disabled_ndb.def
mysql-test/include/: default_ndbd.cnf  have_util_curl.inc
mysql-test/lib/: mtr_process.pl
mysql-test/suite/ndb/r/: ndb_basic_ndbd_shm.result  ndb_fully_replicated_addnode.result  ndb_location_domain_id.result  ndb_location_domain_id_2ng.result  ndb_mgmd.result  ndb_optimized_node_selection.result  ndbinfo_plans.result
mysql-test/suite/ndb/t/: clusterj.cnf  ndb_basic_ndbd_shm.cnf  ndb_location_domain_id.test  ndb_location_domain_id_2ng.cnf  ndb_location_domain_id_2ng.test  ndb_optimized_node_selection.test
mysql-test/suite/ndb_binlog/r/: ndb_binlog_basic.result
mysql-test/suite/ndb_quota/: ndb_basic.result
mysql-test/suite/ndb_rpl/t/: ndb_rpl_circular_apply_status.test
mysql-test/suite/ndb_tls/: sign_keys.cnf  sign_keys.result  sign_keys.test
mysql-test/suite/rdrs/: my.cnf
mysql-test/suite/rdrs/include/: have_rdrs.inc
mysql-test/suite/rdrs/t/: batch.test  mem-buffers.test  pk.test  stat.test
mysql-test/suite/rdrs2/: disabled.def  my.cnf  rdrs_config_template.json
mysql-test/suite/rdrs2-golang/: disabled.def  my.cnf
mysql-test/suite/rdrs2-golang/include/: run_gotest.inc
mysql-test/suite/rdrs2-golang/r/: rdrs2-golang_health.result  rdrs2-golang_ping.result
mysql-test/suite/rdrs2-golang/t/: rdrs2-golang_batchfeaturestore.test
mysql-test/suite/rdrs2/r/: rdrs2_encoding.result
mysql-test/suite/rdrs2/t/: rdrs2_encoding.test
mysql-test/suite/rondb_big/: ndb_many_tables.result  ndb_many_tables.test
mysql-test/suite/ronsql/: disabled.def  my.cnf  rdrs_config_template.json
mysql-test/suite/ronsql/include/: ronsql_compare.inc  ronsql_create_table_api_scan.inc  setup_hopsworks_api_keys.inc
mysql-test/suite/ronsql/r/: ronsql_emptytable.result  ronsql_encoding.result  ronsql_rdrs_basic.result
mysql-test/suite/ronsql/t/: ronsql_emptytable.test  ronsql_encoding.test  ronsql_rdrs_basic.test
share/: messages_to_clients.txt
storage/innobase/buf/: buf0buf.cc
storage/ndb/: CMakeLists.txt  compile-cluster
storage/ndb/clusterj/: run-clusterj-unit-test
storage/ndb/clusterj/clusterj-test/: CMakeLists.txt
storage/ndb/include/: CMakeLists.txt  ndb_global.h  ndb_version.h.in
storage/ndb/include/kernel/: GlobalSignalNumbers.h  Interpreter.hpp  ndb_limits.h
storage/ndb/include/mgmapi/: mgmapi.h  mgmapi_config_parameters.h
storage/ndb/include/ndbapi/: NdbDictionary.hpp  NdbInterpretedCode.hpp  NdbOperation.hpp  NdbReceiver.hpp  NdbScanOperation.hpp  ndb_cluster_connection.hpp
storage/ndb/ndbapi-examples/: CMakeLists.txt
storage/ndb/plugin/: ha_ndbcluster.cc  ha_ndbcluster_binlog.cc  ndb_global_schema_lock.cc
storage/ndb/rest-server2/: CMakeLists.txt  main.cc
storage/ndb/rest-server2/server/: .clang-format
storage/ndb/rest-server2/server/src/: CMakeLists.txt  batch_feature_store_ctrl.cpp  batch_pk_read_ctrl.cpp  buffer_manager.hpp  config_structs.cpp  config_structs.hpp  config_structs_def.hpp  connection.cpp  connection.hpp  constants.hpp  encoding.cpp  encoding.hpp  encoding_helper.cpp  encoding_helper.hpp  error_strings.h  feature_store_ctrl.cpp  feature_store_ctrl.hpp  feature_util.cpp  feature_util.hpp  json_parser.cpp  json_printer.cpp  json_printer.hpp  logger.cpp  logger.hpp  main.cc  metadata.cpp  metadata.hpp  metrics.cpp  metrics.hpp  operations_feature_store.cpp  operations_feature_store.hpp  pk_data_structs.cpp  pk_data_structs.hpp  pk_read_ctrl.cpp  pk_read_ctrl.hpp  prometheus_ctrl.cpp  prometheus_ctrl.hpp  rdrs_const.h  rdrs_dal.cpp  rdrs_dal.h  (+7 more)
storage/ndb/rest-server2/server/src/db_operations/pk/: common.cpp  common.hpp  pkr_operation.cpp  pkr_operation.hpp  pkr_request.cpp  pkr_request.hpp  pkr_response.cpp  pkr_response.hpp
storage/ndb/rest-server2/server/src/db_operations/ronsql/: ronsql_operation.cpp
storage/ndb/rest-server2/server/src/feature_store/: feature_store.cpp  feature_store.h
storage/ndb/rest-server2/server/test/: CMakeLists.txt  feature_store_test.cpp
storage/ndb/rest-server2/server/test/resources/testdbs/fixed/: hopsworks_40_data.sql
storage/ndb/rest-server2/server/test_go/: go.mod  go.sum  script.sh
storage/ndb/rest-server2/server/test_go/internal/integrationtests/: benchmark_util.go
storage/ndb/rest-server2/server/test_go/internal/integrationtests/batchfeaturestore/: handler_test.go  helper.go  performance_test.go
storage/ndb/rest-server2/server/test_go/internal/integrationtests/batchpkread/: performance_test.go  unload_schema_test.go  utils.go  utils_rest.go
storage/ndb/rest-server2/server/test_go/internal/integrationtests/feature_store/: handler_test.go  helper.go  performance_test.go  util.go
storage/ndb/rest-server2/server/test_go/internal/integrationtests/health/: handler_test.go
storage/ndb/rest-server2/server/test_go/internal/integrationtests/ping/: performance_test.go  ping_test.go  send.go
storage/ndb/rest-server2/server/test_go/internal/integrationtests/pkread/: performance_test.go  utils.go  utils_rest.go
storage/ndb/rest-server2/server/test_go/internal/integrationtests/stat/: handler_test.go
storage/ndb/rest-server2/server/test_go/internal/testutils/: clients.go
storage/ndb/rest-server2/server/test_go/resources/testdbs/: embeddings.go
storage/ndb/rest-server2/server/test_go/resources/testdbs/fixed/: V8-HWORKS-1670-ray_integration.sql  V9-FSTORE-1592-type_column_size.sql  hopsworks_40_data.sql
storage/ndb/src/: CMakeLists.txt
storage/ndb/tools/: desc.cpp
testclients/: CMakeLists.txt
(+226 files in other folders)
